auth basic nginx + sshd

--- a/users_service/conf/.env
+++ b/users_service/conf/.env
@@ -4,3 +4,4 @@ DB_PATH=./users.db
 ADMIN_USERNAME=nicoAdmin
 ADMIN_PASSWORD=nicoPass
 SECRET=alskdmaDFHSdajsfakliv124sfasjh
+SSH_CLIENTS_GROUP_NAME=operativos_ssh_clients
